--- a/MainPage/styles/base/_responsive.scss
+++ b/MainPage/styles/base/_responsive.scss
@@ -53,7 +53,7 @@
 
     @include respond(900) {
       flex-direction: column;
-      height: 100vh !important;
+      height: 100% !important;
       margin: 5rem 1.5rem 1.5rem 1.5rem !important;
     }
 
@@ -85,5 +85,9 @@
   @include respond(900) {
     text-align: center;
     padding-bottom: 5rem !important;
+  }
+
+  @include respond(400) {
+    padding: 1rem !important;
   }
 }
