just added the new section title

--- a/MainPage/styles/base/_base.scss
+++ b/MainPage/styles/base/_base.scss
@@ -30,3 +30,11 @@ a {
   font-size: 6rem;
   text-decoration: none;
 }
+
+.text-center {
+  text-align: center !important;
+}
+
+.margin-bottom-mid {
+  margin-bottom: 4rem;
+}
