--- a/MainPage/styles/main.scss
+++ b/MainPage/styles/main.scss
@@ -1,4 +1,6 @@
 @import "base/base";
 @import "base/responsive";
+@import "base/typography";
 
 @import "sections/master";
+@import "sections/gallery";
