--- a/MainPage/styles/base/_typography.scss
+++ b/MainPage/styles/base/_typography.scss
@@ -7,6 +7,8 @@
   mix-blend-mode: screen;
   color: transparent;
 
+  text-align: center !important;
+
   transition: all 0.2s;
   &:hover {
     transform: skew(10deg);
