--- a/MainPage/styles/base/_base.scss
+++ b/MainPage/styles/base/_base.scss
@@ -24,11 +24,12 @@ a {
 
 .back {
   position: absolute;
-  top: -4.5rem;
+  top: -1rem;
   right: 0;
   padding: 3rem;
-  font-size: 6rem;
+  font-size: 10rem;
   text-decoration: none;
+  z-index: 100;
 }
 
 .text-center {
@@ -37,4 +38,12 @@ a {
 
 .margin-bottom-mid {
   margin-bottom: 4rem;
+}
+
+.margin-top-big {
+  margin-top: 6rem;
+}
+
+.margin-top-mid {
+  margin-top: 4rem;
 }
