--- a/MainPage/styles/sections/_gallery.scss
+++ b/MainPage/styles/sections/_gallery.scss
@@ -1,3 +1,36 @@
 .gallery {
   overflow: hidden;
+  &__grid {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-auto-rows: 20rem;
+    grid-auto-flow: dense;
+
+    img {
+      max-width: 100%;
+      height: auto;
+      vertical-align: middle;
+      display: inline-block;
+      cursor: pointer;
+
+      transition: all 0.2s;
+      &:hover {
+        transform: skew(2deg);
+      }
+    }
+
+    & > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      & > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+      }
+    }
+  }
 }
