fixed some bugs in the gallery

--- a/MainPage/styles/base/_base.scss
+++ b/MainPage/styles/base/_base.scss
@@ -36,6 +36,10 @@ a {
   text-align: center !important;
 }
 
+.margin-bottom-big {
+  margin-bottom: 14rem !important;
+}
+
 .margin-bottom-mid {
   margin-bottom: 4rem;
 }
