--- a/MainPage/styles/main.css
+++ b/MainPage/styles/main.css
@@ -23,15 +23,42 @@ a {
   color: inherit;
 }
 
-.back {
+.nav {
+  position: fixed;
+  font-size: 5rem;
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2000;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3);
+  text-align: center;
+  cursor: pointer;
+}
+.nav__button {
+  position: relative;
+  margin-top: 50%;
+  margin-left: 50%;
+  transform: translate(-50%, -50%);
+  height: 0.3rem !important;
+}
+.nav__button, .nav__button::before, .nav__button::after {
+  width: 3.5rem;
+  height: 0.2rem;
+  background-color: #000;
+  display: block;
+}
+.nav__button::after, .nav__button::before {
+  content: "";
   position: absolute;
-  top: 1rem;
-  right: 0;
-  padding: 1rem;
-  font-size: 10rem;
-  text-decoration: none;
-  z-index: 100;
-  font-family: "exo", sans-serif;
+}
+.nav__button::before {
+  top: -0.8rem;
+}
+.nav__button::after {
+  top: 0.8rem;
 }
 
 .text-center {
@@ -127,13 +154,15 @@ a {
 }
 
 @media only screen and (max-width: 56.25em) {
-  .back {
-    top: -3.6rem;
+  .nav {
+    top: 2rem;
+    right: 2rem;
   }
 }
 @media only screen and (max-width: 25em) {
-  .back {
-    top: -5rem;
+  .nav {
+    width: 5rem;
+    height: 5rem;
   }
 }
 
