--- a/MainPage/styles/base/_base.scss
+++ b/MainPage/styles/base/_base.scss
@@ -41,7 +41,7 @@ a {
     margin-top: 50%;
     margin-left: 50%;
     transform: translate(-50%, -50%);
-
+    height: 0.3rem;
     &,
     &::before,
     &::after {
