--- a/MainPage/styles/main.scss
+++ b/MainPage/styles/main.scss
@@ -2,6 +2,8 @@
 @import "base/responsive";
 @import "base/typography";
 
+@import "sections/menu";
+
 @import "sections/master";
 @import "sections/gallery";
 @import "sections/story";
