--- a/MainPage/styles/base/_base.scss
+++ b/MainPage/styles/base/_base.scss
@@ -18,52 +18,12 @@ html {
   font-size: 62.5%;
 }
 
-a {
-  color: inherit;
+.hidden {
+  display: none;
 }
 
-.nav {
-  position: fixed;
-  font-size: 5rem;
-  background-color: #fff;
-  height: 7rem;
-  width: 7rem;
-  top: 6rem;
-  right: 6rem;
-  border-radius: 50%;
-  z-index: 2000;
-  box-shadow: 0 1rem 3rem rgba(#000, 0.3);
-  text-align: center;
-  cursor: pointer;
-
-  &__button {
-    position: relative;
-    margin-top: 50%;
-    margin-left: 50%;
-    transform: translate(-50%, -50%);
-
-    &,
-    &::before,
-    &::after {
-      width: 3.5rem;
-      background-color: #000;
-      display: block;
-      height: 2px;
-    }
-
-    &::after,
-    &::before {
-      content: "";
-      position: absolute;
-    }
-
-    &::before {
-      top: -0.8rem;
-    }
-    &::after {
-      top: 0.8rem;
-    }
-  }
+a {
+  color: inherit;
 }
 
 .text-center {
