--- a/MainPage/styles/sections/_menu.scss
+++ b/MainPage/styles/sections/_menu.scss
@@ -31,6 +31,7 @@
     &::before {
       content: "";
       position: absolute;
+      transition: all 0.2s;
     }
 
     &::before {
@@ -39,6 +40,27 @@
     &::after {
       top: 0.8rem;
     }
+
+    // rotate
+    &-clicked {
+      visibility: hidden;
+      &::after,
+      &::before {
+        content: "";
+        position: absolute;
+        visibility: visible;
+        transition: all 0.2s;
+      }
+
+      &::before {
+        top: 0;
+        transform: rotate(130deg);
+      }
+      &::after {
+        top: 0;
+        transform: rotate(-130deg);
+      }
+    }
   }
 }
 
@@ -46,13 +68,19 @@ body {
   position: relative;
 }
 
+.translateX {
+  transform: translateX(-100%);
+}
+
 .menu {
   position: fixed;
   background-image: linear-gradient(to right bottom, #12b886, #0c8599);
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 100;
   opacity: 95%;
+
+  transition: all 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
   &__list {
     color: #fff;
@@ -60,22 +88,41 @@ body {
     font-family: "exo", sans-serif;
     list-style: none;
     text-align: center;
-    margin-top: 50%;
-    margin-left: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    width: fit-content;
+    white-space: nowrap;
 
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 6.5rem;
 
-    a {
+    a:visited,
+    a:link {
       text-decoration: none;
 
       transition: all 0.2s;
       &:hover {
         font-size: 7.5rem;
       }
+    }
+
+    h6 {
+      font-size: 6.7rem;
+      cursor: pointer;
+    }
+
+    svg {
+      width: 6rem;
+    }
+
+    text-align: center;
+    &-item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
     }
   }
 }
