--- a/MainPage/styles/base/_responsive.scss
+++ b/MainPage/styles/base/_responsive.scss
@@ -34,6 +34,12 @@
       @content;
     }
   }
+
+  @if $breakpoint == 336 {
+    @media only screen and (max-width: 21em) {
+      @content;
+    }
+  }
 }
 .master {
   @include respond(1671) {
@@ -224,6 +230,73 @@
     svg {
       @include respond(900) {
         width: 5rem !important;
+      }
+    }
+  }
+}
+///////////////////////////////
+.story {
+  &__box {
+    @include respond(900) {
+      gap: 1.6rem !important;
+      width: 60rem !important;
+    }
+
+    @include respond(640) {
+      flex-direction: column;
+      width: 50rem !important;
+      padding: 2.3rem 2.4rem 2.3rem 4.3rem !important;
+    }
+
+    @include respond(509) {
+      width: 35rem !important;
+    }
+
+    @include respond(400) {
+      width: 30rem !important;
+    }
+
+    @include respond(400) {
+      padding: 2.3rem 1rem 2.3rem 1rem !important;
+    }
+
+    @include respond(336) {
+      width: 25rem !important;
+    }
+
+    img {
+      @include respond(900) {
+        width: 500% !important;
+        transform: scale(1) !important;
+      }
+      @include respond(640) {
+        align-self: center;
+        width: 50% !important;
+        order: 1;
+      }
+    }
+
+    &-arrow {
+      &-left {
+        @include respond(400) {
+          left: -10% !important;
+          opacity: 80% !important;
+        }
+
+        @include respond(336) {
+          left: -10% !important;
+        }
+      }
+      &-right {
+        @include respond(400) {
+          right: -10% !important;
+          opacity: 80% !important;
+        }
+
+        @include respond(336) {
+          right: -10% !important;
+          opacity: 50% !important;
+        }
       }
     }
   }
