--- a/MainPage/styles/base/_typography.scss
+++ b/MainPage/styles/base/_typography.scss
@@ -6,8 +6,9 @@
   background-clip: text;
   mix-blend-mode: screen;
   color: transparent;
+  cursor: default;
 
-  text-align: center !important;
+  width: 99.8%;
 
   transition: all 0.2s;
   &:hover {
