fixed some bugs

--- a/MainPage/styles/base/_responsive.scss
+++ b/MainPage/styles/base/_responsive.scss
@@ -285,6 +285,7 @@
 
         @include respond(336) {
           left: -10% !important;
+          opacity: 50% !important;
         }
       }
       &-right {
