--- a/MainPage/styles/base/_base.scss
+++ b/MainPage/styles/base/_base.scss
@@ -49,3 +49,43 @@ a {
 .margin-top-mid {
   margin-top: 4rem;
 }
+
+/////////////////////////////////////// preloader
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 9999;
+}
+
+.preloader:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  border: 5px solid #ccc;
+  border-top-color: #555;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+body.loading .preloader {
+  display: block;
+}
+
+body.loaded .preloader {
+  display: none;
+}
+///
