--- a/MainPage/styles/main.css
+++ b/MainPage/styles/main.css
@@ -51,6 +51,43 @@ a {
   margin-top: 4rem;
 }
 
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 9999;
+}
+
+.preloader:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  border: 5px solid #ccc;
+  border-top-color: #555;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+body.loading .preloader {
+  display: block;
+}
+
+body.loaded .preloader {
+  display: none;
+}
+
 @media only screen and (max-width: 104.4375em) {
   .master {
     line-height: 1;
@@ -481,9 +518,6 @@ body {
   background-image: linear-gradient(to right bottom, #ffe066, #ff922b);
 }
 
-.gallery {
-  overflow: hidden;
-}
 .gallery__grid {
   display: grid;
   gap: 1rem;
@@ -513,6 +547,52 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 5px;
+}
+.gallery .float {
+  position: fixed;
+  content: "";
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.3) skew(0deg) !important;
+  width: 50rem;
+  height: 50rem;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+  z-index: 40;
+}
+.gallery .float__arrow {
+  position: absolute;
+  content: "";
+  width: 7rem;
+  height: 7rem;
+  background-color: #eee;
+  color: rgba(17, 17, 17, 0.8);
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.4);
+  transform: translateY(-50%);
+  top: 50%;
+  transition: all 0.2s;
+}
+.gallery .float__arrow:active {
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.3);
+  top: 51%;
+}
+.gallery .float__arrow-left {
+  left: 25%;
+}
+.gallery .float__arrow-right {
+  right: 25%;
+}
+.gallery .float__overlay {
+  position: fixed;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(51, 51, 51, 0.8);
+  z-index: 30;
 }
 
 .story ::-moz-selection {
