--- a/MainPage/styles/sections/_story.scss
+++ b/MainPage/styles/sections/_story.scss
@@ -15,7 +15,7 @@
     gap: 8.6rem;
 
     img {
-      width: 120%;
+      width: 15rem;
       transform: scale(1.5);
       border-radius: 0.5rem;
       box-shadow: 0 1rem 3rem rgba(#000, 0.4);
