--- a/MainPage/styles/base/_base.scss
+++ b/MainPage/styles/base/_base.scss
@@ -59,6 +59,35 @@ a {
   height: 100%;
   background-color: #fff;
   z-index: 9999;
+
+  //   img {
+  //     content: "";
+  //     position: absolute;
+  //     top: 50%;
+  //     left: 50%;
+  //     transform: translate(-50%, -50%);
+  //     width: 50px;
+  //     height: 50px;
+  //     border: 5px solid #ccc;
+  //     border-top-color: #555;
+  //     border-radius: 50%;
+  //     animation: spin 1s linear infinite;
+  //     animation-fill-mode: forwards;
+  //   }
+  // }
+
+  // p {
+  //   content: "";
+  //   position: absolute;
+  //   text-align: center;
+  //   font-family: sans-serif;
+  //   font-size: 1.6rem;
+  //   top: 56%;
+  //   left: 50%;
+  //   width: 50px;
+  //   height: 50px;
+  //   transform: translate(-50%, -50%);
+  // }
 }
 
 .preloader:after {
@@ -66,6 +95,7 @@ a {
   position: absolute;
   top: 50%;
   left: 50%;
+  // transform: translate(-50%, -50%);
   width: 50px;
   height: 50px;
   border: 5px solid #ccc;
