--- a/TheCommunity/styles/main.css
+++ b/TheCommunity/styles/main.css
@@ -65,8 +65,11 @@ body {
   background-color: #eee;
 }
 .master__chat {
+  border: solid 2px #eee;
   grid-column: 2/3;
   width: 100%;
+  display: grid;
+  align-content: end;
 }
 .master__chat.default {
   background-image: linear-gradient(to right bottom, #364fc7, #5f3dc4);
@@ -78,4 +81,37 @@ body {
   margin-top: 50%;
   margin-left: 50%;
   transform: translate(-50%, -50%);
+}
+.master__chat__global {
+  margin-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+.master__chat__global-input {
+  font-size: 2rem;
+  width: 80%;
+  height: 5rem;
+  border-radius: 40px;
+  padding: 1rem;
+}
+.master__chat__global-submit {
+  width: 8rem;
+  height: 5rem;
+  background: none;
+  border: 0;
+  background-color: lightseagreen;
+  border-radius: 100px;
+  font-size: 2rem;
+  color: #fff;
+  cursor: pointer;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.4);
+  transition: all 0.2s;
+}
+.master__chat__global-submit:hover {
+  background-color: rgb(32, 166, 159);
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.1);
+}
+.master__chat__global-submit:active {
+  transform: translateY(3px);
 }
