--- a/TheCommunity/styles/master/_master.scss
+++ b/TheCommunity/styles/master/_master.scss
@@ -7,6 +7,7 @@
   font-family: "exo", sans-serif;
 
   display: grid;
+
   grid-template-columns: 1fr 3fr 1fr;
 
   &__sidebar {
@@ -53,6 +54,7 @@
   }
 
   &__chat {
+    border: solid 2px #eee;
     grid-column: 2 / 3;
     width: 100%;
     ///////////////////////////////////// default view
@@ -67,6 +69,46 @@
       margin-top: 50%;
       margin-left: 50%;
       transform: translate(-50%, -50%);
+    }
+
+    display: grid;
+    align-content: end;
+    &__global {
+      margin-bottom: 1rem;
+      display: flex;
+      gap: 1rem;
+      justify-content: center;
+
+      &-input {
+        font-size: 2rem;
+        width: 80%;
+        height: 5rem;
+        border-radius: 40px;
+        padding: 1rem;
+      }
+
+      &-submit {
+        width: 8rem;
+        height: 5rem;
+        background: none;
+        border: 0;
+        background-color: lightseagreen;
+        border-radius: 100px;
+        font-size: 2rem;
+        color: #fff;
+        cursor: pointer;
+        box-shadow: 0 3rem 5rem rgba(#000, 0.4);
+
+        transition: all 0.2s;
+        &:hover {
+          background-color: rgb(32, 166, 159);
+          box-shadow: 0 3rem 5rem rgba(#000, 0.1);
+        }
+
+        &:active {
+          transform: translateY(3px);
+        }
+      }
     }
 
     ///////////////////////////////////// global view
