--- a/TheCommunity/styles/base/_base.scss
+++ b/TheCommunity/styles/base/_base.scss
@@ -15,10 +15,10 @@ html {
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   background-image: linear-gradient(to right bottom, #339af0, #0c8599);
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
