--- a/TheCommunity/styles/main.css
+++ b/TheCommunity/styles/main.css
@@ -15,18 +15,18 @@ html {
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   background-image: linear-gradient(to right bottom, #339af0, #0c8599);
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .master {
   background-color: #fff;
-  width: 150rem;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.4);
   font-family: "exo", sans-serif;
@@ -65,35 +65,44 @@ body {
   background-color: #eee;
 }
 .master__chat {
-  border: solid 2px #eee;
   grid-column: 2/3;
   width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   display: grid;
-  align-content: end;
 }
-.master__chat.default {
+.master__chat.default-background {
   background-image: linear-gradient(to right bottom, #364fc7, #5f3dc4);
 }
 .master__chat__default {
   font-size: 3rem;
   color: #fff;
+  text-align: center;
   cursor: pointer;
   margin-top: 50%;
   margin-left: 50%;
   transform: translate(-50%, -50%);
+  display: grid;
 }
 .master__chat__global {
   margin-bottom: 1rem;
   display: flex;
   gap: 1rem;
   justify-content: center;
+  align-self: end;
 }
 .master__chat__global-input {
   font-size: 2rem;
-  width: 80%;
+  width: 70%;
   height: 5rem;
   border-radius: 40px;
   padding: 1rem;
+  border: 1px solid #333;
+  transition: all 0.2s;
+}
+.master__chat__global-input:focus {
+  width: 80%;
+  outline: none;
 }
 .master__chat__global-submit {
   width: 8rem;
@@ -105,7 +114,7 @@ body {
   font-size: 2rem;
   color: #fff;
   cursor: pointer;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.4);
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.2);
   transition: all 0.2s;
 }
 .master__chat__global-submit:hover {
@@ -114,4 +123,55 @@ body {
 }
 .master__chat__global-submit:active {
   transform: translateY(3px);
+}
+.master__chat__messages {
+  font-size: 1.8rem;
+  font-family: "exo", sans-serif;
+  width: 100%;
+  height: -moz-min-content;
+  height: min-content;
+  padding: 1rem;
+  margin: 0.5rem;
+  word-break: break-all;
+  list-style: none;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+  display: grid;
+  gap: 1rem;
+}
+.master__chat__messages .message-1 {
+  background-image: linear-gradient(to bottom right, #ced4da, #ced4da);
+  border-bottom-right-radius: 15px;
+  width: -moz-fit-content;
+  width: fit-content;
+  max-width: 80%;
+}
+.master__chat__messages-received-box {
+  display: flex;
+}
+.master__chat__messages-received-box img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  align-self: center;
+}
+.master__chat__messages .message-2 {
+  background-image: linear-gradient(to bottom right, #50a8ff, #63a9f0);
+  width: -moz-fit-content;
+  width: fit-content;
+  max-width: 80%;
+  justify-self: end;
+  border-bottom-left-radius: 15px;
+}
+.master__chat__messages span {
+  font-size: 1rem;
+}
+.master__settings {
+  font-size: 2rem;
+  overflow-y: scroll;
+  display: grid;
+  justify-content: center;
+}
+.master__settings-setting {
+  margin-top: 1rem;
 }
